Avoid flag fixed height on mobile view

--- a/src/styles/containers/country-details-container.scss
+++ b/src/styles/containers/country-details-container.scss
@@ -45,7 +45,7 @@
 
       @media screen and (max-width: 600px) {
         width: 100%;
-        height: 25vh;
+        height: auto;
       }
     }
   }
